--- a/app/src/main/res/layout/fragment_questionaire_age_group.xml
+++ b/app/src/main/res/layout/fragment_questionaire_age_group.xml
@@ -29,7 +29,7 @@
                 android:src="@drawable/ic_park" />
 
             <TextView
-                android:id="@+id/iv_AgeGroupQuestion"
+                android:id="@+id/tv_AgeGroupQuestion"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
