--- a/app/src/main/res/layout/fragment_questionaire_bmi.xml
+++ b/app/src/main/res/layout/fragment_questionaire_bmi.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_BMIFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_BMIFragmentCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -12,43 +14,56 @@
         app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
+            android:id="@+id/ll_BMIFragmentInnerContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_gravity="center_horizontal"
+                android:id="@+id/iv_BMIIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.29"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/ic_bmi"
                 android:tint="@color/colorGreenish" />
 
             <TextView
+                android:id="@+id/tv_BMIQuestion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
                 android:layout_margin="10dp"
                 android:text="What is your height and weight?"
                 android:textAlignment="center"
+                android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="35sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:autoSizeMaxTextSize="35sp"
+                android:autoSizeMinTextSize="20sp"
+                android:autoSizeTextType="uniform"/>
 
             <View
+                android:id="@+id/v_BMIDivider"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.01"
                 android:layout_margin="10dp"
                 android:background="@color/colorWhite" />
 
             <LinearLayout
+                android:id="@+id/ll_BMIOptionsContainer"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="30dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <EditText
+                    android:id="@+id/et_BMIHeightInput"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:drawableStart="@drawable/ic_height"
@@ -64,6 +79,7 @@
                     android:layout_marginBottom="30dp" />
 
                 <EditText
+                    android:id="@+id/et_BMIWeightInput"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:drawableStart="@drawable/ic_weight"
