--- a/app/src/main/res/layout/fragment_questionaire_financial.xml
+++ b/app/src/main/res/layout/fragment_questionaire_financial.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_FinancialFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_FinancialCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -12,61 +14,73 @@
         app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
+            android:id="@+id/ll_FinancialFragmentInnerContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_FinancialIcon"
                 android:layout_width="250dp"
-                android:layout_height="250dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.29"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:src="@mipmap/money"
                 />
 
             <TextView
+                android:id="@+id/tv_FinancialQuestion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
                 android:layout_margin="10dp"
                 android:text="What is your income range?"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="35sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"
+                android:autoSizeMaxTextSize="35sp"
+                android:autoSizeMinTextSize="20sp"
+                android:autoSizeTextType="uniform"/>
 
             <View
+                android:id="@+id/v_FinancialDivider"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.01"
                 android:layout_margin="10dp"
                 android:background="@color/colorWhite" />
 
             <LinearLayout
+                android:id="@+id/ll_FinancialOptionsContainer"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="30dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
 
                 <RadioGroup
-                    android:id="@+id/rg_AgeGroupOptionsGroup"
+                    android:id="@+id/rg_FinancialOptionsGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
                     <RadioButton
-                        android:id="@+id/rb_AgeGroup1"
+                        android:id="@+id/rb_FinancialOption1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:buttonTint="@color/colorParkGreen"
-                        android:text="below $2k"
+                        android:text="Below $2k"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/rb_AgeGroup2"
+                        android:id="@+id/rb_FinancialOption2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
@@ -77,7 +91,7 @@
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/rb_AgeGroup3"
+                        android:id="@+id/rb_FinancialOption3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
@@ -88,7 +102,7 @@
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/rb_AgeGroup4"
+                        android:id="@+id/rb_FinancialOption4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
@@ -99,11 +113,11 @@
                         android:textStyle="bold" />
 
                     <RadioButton
-                        android:id="@+id/rb_AgeGroup5"
+                        android:id="@+id/rb_FinancialOption5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/colorParkGreen"
-                        android:text="above $8kk"
+                        android:text="Above $8k"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
