--- a/app/src/main/res/layout/fragment_questionaire_sports.xml
+++ b/app/src/main/res/layout/fragment_questionaire_sports.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_SportsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_SportsCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -12,39 +14,49 @@
         app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
+            android:id="@+id/ll_SportsFragmentInnerContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_gravity="center_horizontal"
+                android:id="@+id/iv_SportsIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.29"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_sports"
-                />
+                android:src="@drawable/ic_sports" />
 
             <TextView
+                android:id="@+id/tv_SportsQuestion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
                 android:layout_margin="10dp"
                 android:text="What kind of sports do you like?"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="35sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"
+                android:autoSizeMaxTextSize="35sp"
+                android:autoSizeMinTextSize="20sp"
+                android:autoSizeTextType="uniform"/>
 
             <View
+                android:id="@+id/v_SportsDivider"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.01"
                 android:layout_margin="10dp"
                 android:background="@color/colorWhite" />
 
             <LinearLayout
+                android:id="@+id/ll_SportsOptionsContainer"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="30dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
@@ -96,4 +108,4 @@
 
     </android.support.v7.widget.CardView>
 
-</RelativeLayout><?xml version="1.0" encoding="utf-8"?>
+</RelativeLayout>
