--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="colorTransparent">@android:color/transparent</color>
     <color name="colorTranslucentBackground">#DCFFFFFF</color>
     <color name="colorLightBlue">#43BFD7</color>
+    <color name="colorSkyBlue">#e5f4fa</color>
     <color name="colorShadowGray">#E7E5E6</color>
     <color name="colorLightGray">#9EA8AA</color>
     <color name="colorCyan">#96D8D7</color>
