--- a/app/src/main/res/layout/fragment_questionaire_bmi.xml
+++ b/app/src/main/res/layout/fragment_questionaire_bmi.xml
@@ -70,7 +70,7 @@
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/colorWhite"
                     android:textColorHint="@color/colorShadowGray"
-                    android:hint="Height"
+                    android:hint="Height (in cm)"
                     android:textSize="25sp"
                     android:textColor="@color/colorWhite"
                     android:textColorLink="@color/colorWhite"
@@ -86,7 +86,7 @@
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/colorWhite"
                     android:textColorHint="@color/colorShadowGray"
-                    android:hint="Weight"
+                    android:hint="Weight (in kg)"
                     android:textSize="25sp"
                     android:textColor="@color/colorWhite"
                     android:layout_width="wrap_content"
