--- a/app/src/main/res/layout/fragment_questionaire_social.xml
+++ b/app/src/main/res/layout/fragment_questionaire_social.xml
@@ -75,6 +75,7 @@
                     android:thumbTint="@color/colorCyan" />
 
                 <TextView
+                    android:id="@+id/tv_SocialScaleNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
