--- a/app/src/main/res/layout/activity_suggestions.xml
+++ b/app/src/main/res/layout/activity_suggestions.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_SuggestionsActivityContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SuggestionsActivity">
+    tools:context=".SuggestionsActivity"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <com.connite.NonSwipeableViewPager
+        android:id="@+id/nsvp_SuggestionsViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        android:layout_margin="@dimen/cardViewDefaultMargin" />
+
+    <RelativeLayout
+        android:id="@+id/rl_SuggestionsActivityCloseContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerInParent="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_keyboard_arrow_down_gray_24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Close"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:layout_gravity="center_vertical" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</LinearLayout>
