--- a/app/src/main/res/layout/activity_suggestions.xml
+++ b/app/src/main/res/layout/activity_suggestions.xml
@@ -22,23 +22,27 @@
         android:layout_weight="0.1">
 
         <LinearLayout
+            android:id="@+id/ll_SuggestionsActivityCloseHorizontalContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_centerInParent="true">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_SuggestionsActivityCloseIcon"
+                android:layout_width="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_keyboard_arrow_down_gray_24dp"/>
 
             <TextView
+                android:id="@+id/tv_SuggestionsActivityCloseText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Close"
                 android:textStyle="bold"
                 android:textSize="30sp"
+                android:textColor="@color/colorDarkGray"
                 android:layout_gravity="center_vertical" />
 
         </LinearLayout>
