--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -45,7 +45,7 @@
                 android:layout_marginEnd="@dimen/cardViewLargePadding"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:autoSizeMinTextSize="20sp"
+                android:autoSizeMinTextSize="25sp"
                 android:autoSizeMaxTextSize="30sp"
                 android:autoSizeTextType="uniform"
                 android:textColor="@color/colorDarkGray"
@@ -60,7 +60,7 @@
                 android:layout_marginStart="@dimen/cardViewLargePadding"
                 android:layout_marginEnd="@dimen/cardViewLargePadding"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textColor="@color/colorLightGray"
                 android:text="Suggestion Description"/>
 
@@ -153,7 +153,7 @@
                     android:src="@mipmap/ic_location"/>
 
                 <TextView
-                    android:id="@+id/tv_SuggestionLocationDescription"
+                    android:id="@+id/tv_SuggestionNamedLocation"
                     android:layout_width="0dp"
                     android:layout_weight="0.8"
                     android:layout_height="match_parent"
@@ -183,15 +183,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@mipmap/reject_suggestion"
-                    android:drawableTop="@drawable/ic_check_white_24dp"
                     android:layout_alignParentStart="true"/>
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <Button
                     android:id="@+id/civ_AcceptSuggestion"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true"
-                    android:src="@mipmap/accept_suggestion"/>
+                    android:background="@mipmap/accept_suggestion"
+                    android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
 
