--- a/app/src/main/res/layout/activity_suggestions.xml
+++ b/app/src/main/res/layout/activity_suggestions.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"
-        android:layout_margin="@dimen/cardViewDefaultMargin" />
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="@dimen/cardViewDoubleMargin"
+        android:layout_marginEnd="@dimen/cardViewDoubleMargin"/>
 
     <RelativeLayout
         android:id="@+id/rl_SuggestionsActivityCloseContainer"
