--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -4,7 +4,9 @@
     android:id="@+id/rl_SuggestionCardContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/cardViewDefaultMargin">
+    android:layout_marginStart="@dimen/cardViewDoubleMargin"
+    android:layout_marginEnd="@dimen/cardViewDoubleMargin"
+    android:layout_marginTop="@dimen/cardViewDoubleMargin">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_SuggestionCard"
@@ -62,7 +64,11 @@
                 android:textStyle="bold"
                 android:textSize="25sp"
                 android:textColor="@color/colorLightGray"
-                android:text="Suggestion Description"/>
+                android:text="Suggestion Description"
+                android:autoSizeMaxTextSize="25sp"
+                android:autoSizeMinTextSize="18sp"
+                android:autoSizeTextType="uniform"
+                android:maxLines="4"/>
 
             <View
                 android:id="@+id/v_SuggestionDivider"
@@ -176,20 +182,23 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.15"
                 android:layout_marginStart="@dimen/cardViewLargePadding"
-                android:layout_marginEnd="@dimen/cardViewLargePadding">
+                android:layout_marginEnd="@dimen/cardViewLargePadding"
+                android:layout_marginTop="@dimen/cardViewLargePadding">
 
                 <Button
-                    android:id="@+id/civ_RejectSuggestion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@mipmap/reject_suggestion"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:id="@+id/btn_DeclineSuggestion"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@mipmap/ic_decline"
                     android:layout_alignParentStart="true"/>
 
                 <Button
-                    android:id="@+id/civ_AcceptSuggestion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@mipmap/accept_suggestion"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:id="@+id/btn_AcceptSuggestion"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@mipmap/ic_accept"
                     android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
