--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,12 +6,9 @@
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/cardViewLargePadding">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SETTINGS FRAGMENT"
-        android:textSize="50sp"
-        android:textAlignment="center"
-        android:layout_centerInParent="true"/>
+    <RelativeLayout
+        android:id="@+id/rl_SettingsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
