--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/cardViewLargePadding">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CONNECT FRAGMENT"
-        android:textSize="50sp"
-        android:textAlignment="center"
-        android:layout_centerInParent="true"/>
+    <ScrollView
+        android:id="@+id/sv_ConnectFragmentScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+
+        <com.connite.ExpandableHeightListView
+            android:id="@+id/ehlv_ConnectFragmentUserList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:paddingTop="@dimen/cardViewLargePadding"
+            android:scrollbars="none" />
+
+    </ScrollView>
 
 </RelativeLayout>
